Fixed fireworks z-index order

--- a/src/assets/therun.css
+++ b/src/assets/therun.css
@@ -125,7 +125,7 @@ img {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 101;
+    z-index: 10;
 }
 .fireworks video {
     width: 100vw;
